src/test/deca/context/invalid/inheritance/extends_non_class_type.deca
// Description :
//    Classe héritant d'un type non classe.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A extends int {
    int x;
}

{
}

